--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
+    "@cucumber/cucumber": "^11.2.0",
     "@types/bun": "latest"
   },
   "peerDependencies": {
